--- a/Exercice7/style.css
+++ b/Exercice7/style.css
@@ -51,3 +51,19 @@ section {
     margin-bottom: 20px;
 }
 
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 20px;
+    }
+    nav ul {
+        justify-content: space-evenly;
+        font-size: 13px;
+        flex-direction: column;
+    }
+    nav li {
+        margin-right: 0px;
+    }
+    body {
+        text-align: center;
+    }
+    }
